The first commit with unitofwork application

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /AOM.UnitOfWorkSln/.vs/AOM.UnitOfWorkSln/v16/.suo
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.API/bin/Debug/netcoreapp3.1
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.API/obj
