--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,23 @@
 /AOM.UnitOfWorkSln/.vs/AOM.UnitOfWorkSln/v16/.suo
 /AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.API/bin/Debug/netcoreapp3.1
 /AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.API/obj
+/AOM.UnitOfWorkSln/.vs/AOM.UnitOfWorkSln/DesignTimeBuild/.dtbcache.v2
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/bin/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.pdb
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/bin/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.dll
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/bin/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.deps.json
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Container/ContainerRunContext.cache
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Container/ContainerName.cache
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Container/ContainerId.cache
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Container/ContainerDevelopmentMode.cache
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.pdb
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.dll
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.csprojAssemblyReference.cache
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.csproj.FileListAbsolute.txt
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.assets.cache
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.AssemblyInfoInputs.cache
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/Debug/netcoreapp3.1/AOM.UnitOfWorkSln.CrossCutting.AssemblyInfo.cs
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/project.nuget.cache
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/project.assets.json
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/AOM.UnitOfWorkSln.CrossCutting.csproj.nuget.g.targets
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/AOM.UnitOfWorkSln.CrossCutting.csproj.nuget.g.props
+/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/obj/AOM.UnitOfWorkSln.CrossCutting.csproj.nuget.dgspec.json
