--- a/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/AOM.UnitOfWorkSln.CrossCutting.csproj
+++ b/AOM.UnitOfWorkSln/AOM.UnitOfWorkSln.CrossCutting/AOM.UnitOfWorkSln.CrossCutting.csproj
@@ -1,16 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>fc7dd08a-80a4-4ecd-9e4e-6266d26cdf84</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup>    
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />    
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.RazorPages" Version="2.2.5" />    
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
   </ItemGroup>
-
 
 </Project>
